tweak bg color and fix layout bug

--- a/src/Components/Card/Card--400up.scss
+++ b/src/Components/Card/Card--400up.scss
@@ -1,5 +1,6 @@
 .card {
   flex-direction: column;
+  display: contents;
 
   &__icon {
     &--dark {
